# sanctum

./: .gitignore  README.md
crucible/: README.md  pyproject.toml
crucible/.claude-plugin/: plugin.json
crucible/commands/: init-vault.md
crucible/jobs/: generate_resume.py
crucible/llm/: classify_inbox.py
crucible/llm/providers/: README.md  claude.py  openai.py
crucible/src/crucible/: __init__.py  init_vault.py
crucible/src/crucible/jobs/: generate_resume.py
crucible/src/crucible/llm/: classify_inbox.py
crucible/src/crucible/llm/providers/: README.md  anthropic_provider.py
crucible/src/crucible/templates/: __init__.py  resume-template.md
crucible/templates/: cover-letter-template.md
crucible/tests/: test_classify_inbox.py  test_init_vault.py  test_moc.py  test_templates.py
docs/: SPEC.md  vault-assistant-prompt.md
docs/commands/: generate-resume.md
docs/tasks/: crucible.md  rituals.md  sprite.md
rituals/: classify-inbox.yml
sprite/: .prettierignore  DEPLOYMENT.md  README.md  eslint.config.js  package.json  tsconfig.json  vite.config.ts  worker-configuration.d.ts  wrangler.jsonc
sprite/src/: index.ts  types.ts
sprite/src/github/: contents.test.ts  contents.ts
sprite/src/handlers/: capture.test.ts  capture.ts
sprite/src/lib/: ai-gateway.ts
sprite/src/markdown/: format.test.ts  format.ts
sprite/src/processor/: classify.ts  github.ts  index.ts  preprocess.ts  queue.ts
sprite/src/prompts/: classify.ts
sprite/src/routes/: webhook.ts
sprite/src/telegram/: bot.ts
sprite/src/types/: queue.ts
